--- a/style.css
+++ b/style.css
@@ -1,98 +1,95 @@
-body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: url(background.jpg);
-    overflow: hidden;
-}
-
-.card {
-    display: grid;
-    grid-template-columns: 300px;
-    grid-template-rows: 210px 210px 80px;
-    grid-template-areas: "image" "text" "stats";
-    font-family: 'Roboto';
-    border-radius: 18px;
-    background: white;
-    box-shadow: 5px 5px rgba(0, 0, 0, 0.9);
-    text-align: center;
-    transition: 0.5s ease;
-    cursor: pointer;
-    margin-left: 40px;
-}
-
-.card-image {
-    grid-area: image;
-    background: url(img1.jpg);
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-size: cover;
-}
-
-.card-text {
-    grid-area: text;
-    margin: 25px;
-}
-
-.card-text .date {
-    color: rgb(0, 68, 255);
-    font-size: 16px;
-}
-
-.card-text p {
-    color: black;
-    font-size: 15px;
-    font-weight: 300;
-    text-align: justify;
-}
-
-.card-text h2 {
-    margin-top: 0;
-    font-size: 28px;
-}
-
-.card-stats {
-    grid-area: stats;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    background: rgb(68, 156, 156);
-}
-
-.card-stats .stat {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-    color: white;
-}
-
-.cad-stats .type {
-    font-size: 11px;
-    font-weight: 300;
-    text-transform: uppercase;
-}
-
-.card-stats .value {
-    font-size: 22px;
-    font-weight: 500;
-}
-
-.card-stats .border {
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-}
-
-.card-stats .value sup {
-    font-size: 12px;
-}
-
-.card:hover {
-    transform: scale(1.2);
-    box-shadow: -5px -5px 30px 5px aqua, 5px 5px 30px 5px blue;
-}
+    body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+    .card {
+        display: grid;
+        grid-template-columns: 18em;
+        grid-template-rows: 300px 200px 50px;
+        grid-template-areas: "image" "text" "stats";
+        font-family: 'Roboto';
+        border-radius: 1em;
+        background: white;
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.9);
+        text-align: center;
+    }
+    
+    .card-image {
+        grid-area: image;
+        background: url(gray-concrete-tower-364096.jpg) no-repeat center;
+        background-size: cover;
+        border-top-left-radius: 1em;
+        border-top-right-radius: 1em;
+        background-size: cover;
+    }
+    
+    .card-text {
+        grid-area: text;
+    }
+    
+    .card-text .date {
+        color: silver;
+        font-size: .8em;
+        font-family: 'Open Sans Condensed', sans-serif;
+        text-transform: capitalize;
+        border-bottom: 1px solid silver;
+    }
+    
+    .card-text p {
+        color: black;
+        font-size: .8em;
+        font-weight: 300;
+        line-height: 1.2em;
+        text-align: justify;
+        margin: 1em;
+    }
+    
+    .card-text h2 {
+        font-family: 'Open Sans Condensed', sans-serif;
+        color: white;
+        text-align: center;
+        font-size: 1.2em;
+        margin: .6em .6em 0 .6em;
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.40) 120%) #989898;
+        background-blend-mode: multiply, multiply;
+    }
+    
+    .card-stats {
+        grid-area: stats;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        border-bottom-left-radius: 1em;
+        border-bottom-right-radius: 1em;
+        margin: 0 .6em .5em .6em;
+        background: linear-gradient(to bottom, rgba(255, 255, 255, 0.15) 0%, rgba(0, 0, 0, 0.15) 100%), radial-gradient(at top center, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.40) 120%) #989898;
+        background-blend-mode: multiply, multiply;
+    }
+    
+    .card-stats .stat {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: white;
+    }
+    
+    .card-stats .type {
+        font-size: 11px;
+        font-weight: 300;
+        text-transform: capitalize;
+    }
+    
+    .card-stats .value {
+        font-size: .8em;
+        font-weight: 200;
+    }
+    
+    .card-stats .value sup {
+        font-size: 8px;
+    }
